Fix LaTeX encoding issues in bibliography and report files; update titles and author names for consistency. Adjusted statistical performance and spatial likelihood analysis sections for clarity and accuracy. Improved formatting and descriptions in the methodology and results sections.

--- a/equivalence_analysis/report/equiv_analysis.bib
+++ b/equivalence_analysis/report/equiv_analysis.bib
@@ -10,7 +10,7 @@
     institution = "University of California, Irvine, School of Information and Computer Sciences"
 }
 @article{torres2016,
-    title={Classificador por arestas de suporte (CLAS): métodos de aprendizado baseados em Grafos de Gabriel},
+    title={Classificador por arestas de suporte (CLAS): m{\'e}todos de aprendizado baseados em Grafos de Gabriel},
     author={Torres, Luiz ACB},
     journal={Manuscript (PhD thesis)},
     year={2016},
@@ -35,7 +35,7 @@
     doi={10.1109/TII.2020.2989285}
 }
 @article{arias2024,
-    author={Arias-Garcia, J. and Torres, L. C. B. and Campo-Muñoz, D. and Castrillón-Franco, M. A. and Castellanos-Dominguez, G.},
+    author={Arias-Garcia, J. and Torres, L. C. B. and Campo-Mu{\~n}oz, D. and Castrill{\'o}n-Franco, M. A. and Castellanos-Dominguez, G.},
     journal={IEEE Transactions on Neural Networks and Learning Systems},
     title={Improved Design for Hardware Implementation of Graph-Based Large Margin Classifiers for Embedded Edge Computing},
     year={2024},
